--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
+# Visual Studio
+*.suo
+*.user
+*.vspscc
+[Dd]ebug/
+[Rr]elease/
+_UpgradeReport_Files/
+Backup*/
+UpgradeLog*.XML
+ipch/
+*.aps
+*.ncb
+*.opensdf
+*.sdf
 
-# Compiled Dynamic libraries
-*.so
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
+# Qt
+GeneratedFiles/
